--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,7 +22,7 @@
     </p>
 
     <p class="question">
-        Why does the game lets me enter in anything, even total jibberish?
+        Why does the game let me enter in anything, even total jibberish?
     </p>
     <p class="answer">
         Crossword answers can be anything, not just dictionary words! They can be short phrases, proper names and nouns, roman numerals, etc. Therefore, the game lets you type in anything for your answer. Guess carefully! 
