--- a/src/app/tutorial/tutorial.component.html
+++ b/src/app/tutorial/tutorial.component.html
@@ -54,7 +54,7 @@
       The letter <b>T</b> is not in the answer in any spot.
     </p>
 
-    <p class="bold">
+    <p style="margin-bottom: 10px;" class="bold">
       A new Crawsword puzzle will be available each day!
     </p>
 </div>
