--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -57,6 +57,11 @@
     text-align: center;
 }
 
+.new-label{
+    text-align: center;
+    max-width: 120px;
+}
+
 .time{
     font-size: 24px;
     text-align: center;
