linting, update focus traps, update guess remaining UI, add donation link

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,49 +1,69 @@
 <div class="container">
-    <i (click)="closeEvent()" class="close-icon fa-solid fa-xl fa-xmark"></i>
-    <h5>About</h5>
-    <p>
-        Crawsword is a daily word game where players have ten attempts to answer seven Crossword clues.</p>
-    <p class="last">
-        Feedback for each guess is given in the form of colored tiles to indicate if letters match the correct position. To learn more about how to play, <a href="#" (click)="toggleHelpEvent()">click here</a>.</p>
-    <p>
+  <i (click)="closeEvent()" class="close-icon fa-solid fa-xl fa-xmark"></i>
+  <h5>About</h5>
+  <p>
+    Crawsword is a daily word game where players have ten attempts to answer
+    seven Crossword clues.
+  </p>
+  <p class="last">
+    Feedback for each guess is given in the form of colored tiles to indicate if
+    letters match the correct position. To learn more about how to play,
+    <a href="#" (click)="toggleHelpEvent()">click here</a>.
+  </p>
+  <p></p>
 
-    <p class="question">
-        Where do the clues for Crawsword come from?
-    </p>
-    <p class="answer">
-        The clues in Crawsword are real crossword clues that have appeared in real publications. The clues are from modern puzzles (2017 and later).
-    </p>
+  <p class="question">Where do the clues for Crawsword come from?</p>
+  <p class="answer">
+    The clues in Crawsword are real crossword clues that have appeared in real
+    publications. The clues are from modern puzzles (2017 and later).
+  </p>
 
-    <p class="question">
-        The clue/answer I just got doesn't make any sense! What gives?
-    </p>
-    <p class="answer">
-        Sometimes crossword clues are part of a greater puzzle theme, and do not make sense by themselves. Most of these themed clues have been removed from the clue database, but if you encounter a bad clue, please <a href="mailto:wecraw.industries@gmail.com?subject=Crawsword%20Feedback">provide feedback</a> so that it can be removed. 
-    </p>
+  <p class="question">
+    The clue/answer I just got doesn't make any sense! What gives?
+  </p>
+  <p class="answer">
+    Sometimes crossword clues are part of a greater puzzle theme, and do not
+    make sense by themselves. Most of these themed clues have been removed from
+    the clue database, but if you encounter a bad clue, please
+    <a href="mailto:wecraw.industries@gmail.com?subject=Crawsword%20Feedback"
+      >provide feedback</a
+    >
+    so that it can be removed.
+  </p>
 
-    <p class="question">
-        Why does the game let me enter in anything, even total jibberish?
-    </p>
-    <p class="answer">
-        Crossword answers can be anything, not just dictionary words! They can be short phrases, proper names and nouns, roman numerals, etc. Therefore, the game lets you type in anything for your answer. Guess carefully! 
-    </p>
+  <p class="question">
+    Why does the game let me enter in anything, even total jibberish?
+  </p>
+  <p class="answer">
+    Crossword answers can be anything, not just dictionary words! They can be
+    short phrases, proper names and nouns, roman numerals, etc. Therefore, the
+    game lets you type in anything for your answer. Guess carefully!
+  </p>
 
-    <p class="question">
-        How did you make Crawsword?
-    </p>
-    <p class="answer">
-        Check out the <a href="https://github.com/wecraw/crossfire">source code</a> on GitHub.
-    </p>
+  <p class="question">How did you make Crawsword?</p>
+  <p class="answer">
+    Check out the
+    <a href="https://github.com/wecraw/crossfire">source code</a> on GitHub.
+  </p>
 
-    <p class="question">
-        How do I get better at Crawsword?
-    </p>
-    <p class="answer">
-        Do lots of crossword puzzles! Or play a lot of Crawsword in practice mode!
-    </p>
+  <p class="question">How can I support Crawsword?</p>
+  <p class="answer">
+    Your support is greatly appreciated! Please feel free to
+    <a href="mailto:wecraw.industries@gmail.com?subject=Crawsword%20Feedback"
+      >provide feedback</a
+    >
+    via email, make a code contribution
+    <a href="https://github.com/wecraw/crossfire">on GitHub</a>, or help cover
+    hosting fees with a
+    <a href="https://www.paypal.com/donate/?hosted_button_id=ULHKXEU29A2VC"
+      >small donation</a
+    >!
+  </p>
 
-    <p class="footer">
-        ©2022 Will Crawford
-    </p>
-        
+  <p class="question">How do I get better at Crawsword?</p>
+  <p class="answer">
+    Do lots of crossword puzzles! Or play a lot of Crawsword in practice mode!
+  </p>
+
+  <p class="footer">©2024 Will Crawford</p>
 </div>
