update tutorial copy

--- a/src/app/tutorial/tutorial.component.html
+++ b/src/app/tutorial/tutorial.component.html
@@ -7,7 +7,8 @@
   </p>
   <p>
     Each level contains a single crossword clue to solve. The clues become
-    harder as you advance throught the levels.
+    harder as you advance through the levels, just like the daily crossword gets
+    harder as the week goes on!
   </p>
   <p>
     If you check and your answer is wrong, a guess will be used up and the color
